--- a/package.json
+++ b/package.json
@@ -6,5 +6,7 @@
     "clean-html": "1.5.0",
     "promise-ratelimit": "0.0.3",
     "shelljs": "0.8.3"
-  }
+  },
+  "type": "module",
+  "start": "node --experimental-modules --es-module-specifier-resolution=node index.js"
 }
