--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "0.18.0",
+    "bluebird": "^3.5.4",
+    "bluebird-retry": "^0.11.0",
     "cheerio": "1.0.0-rc.3",
     "clean-html": "1.5.0",
     "promise-ratelimit": "0.0.3",
